Fix inconsistent spacing for genres, adjust spacing for InfoContainer component

--- a/src/components/MoviePage/MoviePage.css
+++ b/src/components/MoviePage/MoviePage.css
@@ -29,7 +29,8 @@ h1, h2 {
   flex-direction: row-reverse;
   height: 80vh;
   width: 100vw;
-  margin-top: -6em;
+  margin-top: -2em;
+  margin-bottom: -9%;
 }
 
 
